Header: Add loading spinners for login/logout buttons

--- a/app/components/header.hbs
+++ b/app/components/header.hbs
@@ -72,6 +72,9 @@
                 data-test-logout-button
                 {{on "click" (perform this.session.logoutTask)}}
               >
+                {{#if this.session.logoutTask.isRunning}}
+                  <LoadingSpinner local-class="spinner"/>
+                {{/if}}
                 Sign Out
               </button>
             </menu.Item>
@@ -84,7 +87,11 @@
           data-test-login-button
           {{on "click" (perform this.session.loginTask)}}
         >
-          {{svg-jar "lock" local-class="login-icon"}}
+          {{#if this.session.loginTask.isRunning}}
+            <LoadingSpinner local-class="spinner"/>
+          {{else}}
+            {{svg-jar "lock" local-class="login-icon"}}
+          {{/if}}
           Log in with GitHub
         </button>
       {{/if}}
@@ -102,11 +109,23 @@
             <menu.Item><LinkTo @route="me" data-test-me-link>Account Settings</LinkTo></menu.Item>
             <menu.Item><LinkTo @route="me.pending-invites">Owner Invites</LinkTo></menu.Item>
             <menu.Item local-class="menu-item-with-separator">
-              <button type="button" local-class="logout-menu-item" {{on "click" (perform this.session.logoutTask)}}>Sign Out</button>
+              <button
+                type="button"
+                local-class="logout-menu-item"
+                {{on "click" (perform this.session.logoutTask)}}
+              >
+                {{#if this.session.logoutTask.isRunning}}
+                  <LoadingSpinner local-class="spinner"/>
+                {{/if}}
+                Sign Out
+              </button>
             </menu.Item>
           {{else}}
             <menu.Item>
               <button type="button" local-class="login-menu-item" {{on "click" (perform this.session.loginTask)}}>
+                {{#if this.session.loginTask.isRunning}}
+                  <LoadingSpinner local-class="spinner"/>
+                {{/if}}
                 Log in with GitHub
               </button>
             </menu.Item>
