--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,6 +25,5 @@
   </button>
 {{/if}}
 {{#if this.design.useNewDesign}}
-  {{! template-lint-disable no-curly-component-invocation }}
-  {{add-html-class class="new-design"}}
+  {{set-body-class "new-design"}}
 {{/if}}
