Dropdown: Replace `action` helper usage

--- a/app/components/dropdown.hbs
+++ b/app/components/dropdown.hbs
@@ -1,11 +1,11 @@
 <div
   local-class="container"
   ...attributes
-  {{on-click-outside (action (mut this.dropdownExpanded) false)}}
-  {{on-key 'Escape' (action (mut this.dropdownExpanded) false)}}
+  {{on-click-outside (fn (mut this.dropdownExpanded) false)}}
+  {{on-key 'Escape' (fn (mut this.dropdownExpanded) false)}}
 >
   {{yield (hash
-    Trigger=(component "dropdown/trigger" toggle=(action "toggleDropdown"))
+    Trigger=(component "dropdown/trigger" toggle=this.toggleDropdown)
     Content=(component "dropdown/content" isExpanded=this.dropdownExpanded)
     Menu=(component "dropdown/menu" Content=(component "dropdown/content" isExpanded=this.dropdownExpanded))
   )}}
