--- a/app/components/pending-owner-invite-row.hbs
+++ b/app/components/pending-owner-invite-row.hbs
@@ -29,8 +29,8 @@
       {{moment-from-now @invite.created_at}}
     </div>
     <div>
-      <button type="button" local-class="accept-button" data-test-accept-button {{action (perform this.acceptInvitationTask)}}>Accept</button>
-      <button type="button" local-class="decline-button" data-test-decline-button {{action (perform this.declineInvitationTask)}}>Decline</button>
+      <button type="button" local-class="accept-button" data-test-accept-button {{on "click" (perform this.acceptInvitationTask)}}>Accept</button>
+      <button type="button" local-class="decline-button" data-test-decline-button {{on "click" (perform this.declineInvitationTask)}}>Decline</button>
     </div>
   </div>
 {{/if}}
