--- a/app/templates/crate/owners.hbs
+++ b/app/templates/crate/owners.hbs
@@ -22,7 +22,7 @@
       Username
     </label>
     <Input @type="text" id="new-owner-username" @value={{this.username}} placeholder="Username" local-class="email-input" @name="username" />
-    <button type="submit" local-class="submit-button" data-test-save-button>Save</button>
+    <button type="submit" disabled={{not this.username}} local-class="submit-button" data-test-save-button>Save</button>
   </form>
 </div>
 
