--- a/app/components/api-token-row.hbs
+++ b/app/components/api-token-row.hbs
@@ -1,5 +1,5 @@
 {{#if @token.isNew}}
-  <form local-class="row create-token" {{on "submit" (perform this.saveTokenTask)}}>
+  <form local-class="row create-token" {{on "submit" (prevent-default (perform this.saveTokenTask))}}>
     <div local-class="name">
       <Input
         @type="text"
