--- a/app/components/email-input.hbs
+++ b/app/components/email-input.hbs
@@ -13,7 +13,7 @@
       <div local-class="label">
         <dt>Email</dt>
       </div>
-      <form local-class="email-form" {{on "submit" (perform this.saveEmailTask)}}>
+      <form local-class="email-form" {{on "submit" (prevent-default (perform this.saveEmailTask))}}>
         <Input
           @type="email"
           @value={{this.value}}
