--- a/app/components/settings/api-tokens.module.css
+++ b/app/components/settings/api-tokens.module.css
@@ -18,3 +18,70 @@
     display: flex;
     flex-direction: column;
 }
+
+.row {
+    width: 100%;
+    border: 1px solid #d5d3cb;
+    border-bottom-width: 0;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+
+    &:last-child { border-bottom-width: 1px; }
+}
+
+.create-token {
+    background-color: var(--main-bg-dark);
+
+    .name {
+        padding-right: 20px;
+        margin-right: 0;
+
+        input {
+            width: 100%;
+        }
+    }
+}
+
+.name {
+    flex: 1;
+    margin-right: 0.4em;
+    font-weight: bold;
+}
+
+.dates {
+    flex: content;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 0.4em;
+}
+
+.created-at,
+.last-used-at {
+    composes: small from '../../styles/shared/typography.module.css';
+    line-height: 1.15rem;
+}
+
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.spinner {
+    margin-left: 10px
+}
+
+.save-button {
+    composes: yellow-button small from '../../styles/shared/buttons.module.css';
+}
+
+.revoke-button {
+    composes: tan-button small from '../../styles/shared/buttons.module.css';
+}
+
+.new-token {
+    border-top-width: 0;
+    flex-direction: column;
+    justify-content: stretch;
+}
