--- a/app/components/follow-button.hbs
+++ b/app/components/follow-button.hbs
@@ -1,4 +1,9 @@
-<button type="button" local-class="button" {{on "click" (perform this.toggleFollowTask)}} data-test-follow-button>
+<button
+  type="button"
+  local-class="button"
+  data-test-follow-button
+  {{on "click" (perform this.toggleFollowTask)}}
+>
   {{#if (or this.followStateTask.isRunning this.toggleFollowTask.isRunning)}}
     <LoadingSpinner data-test-spinner />
   {{else}}
