FrontPageList::Item: Use `ember-link` instead of `LinkTo`

--- a/app/components/front-page-list/item.hbs
+++ b/app/components/front-page-list/item.hbs
@@ -1,7 +1,7 @@
-<LinkTo @route={{@route}} @model={{@model}} local-class="link" ...attributes>
+<a href={{@link.url}} local-class="link" ...attributes {{on "click" @link.transitionTo}}>
   <div local-class="left">
     <div local-class="title">{{@title}}</div>
     {{#if @subtitle}}<div local-class="subtitle">{{@subtitle}}</div>{{/if}}
   </div>
   {{svg-jar "chevron-right" local-class="right"}}
-</LinkTo>
+</a>
