Fix broken pluralizations
Passing the formatted number into the `pluralize` helper doesn't work quite as expected, and in these cases we already know the pluralization, so using the `pluralize` helper is somewhat pointless anyway.

--- a/app/templates/categories.hbs
+++ b/app/templates/categories.hbs
@@ -27,7 +27,7 @@
           {{category.category}}
         </LinkTo>
         <span local-class="crate-count" data-test-crate-count>
-          {{ pluralize (format-num category.crates_cnt) "crate" }}
+          {{format-num category.crates_cnt}} {{if (eq category.crates_cnt 1) "crate" "crates"}}
         </span>
       </div>
       <div local-class="description">
