--- a/app/templates/crate/version.hbs
+++ b/app/templates/crate/version.hbs
@@ -27,7 +27,7 @@
       <li><a href="{{this.crate.mailing_list}}">Mailing list</a></li>
     {{/if}}
     {{#if this.documentationLink}}
-      <li><a href="{{this.documentationLink}}">Documentation</a></li>
+      <li><a href="{{this.documentationLink}}" data-test-docs-link>Documentation</a></li>
     {{/if}}
     {{#if this.crate.repository}}
       <li><a href="{{this.crate.repository}}">Repository</a></li>
