DownloadGraph: Set `maintainAspectRatio: false` and use `min-height` instead
Without this the graph looks very pressed together on mobile devices

--- a/app/components/download-graph.hbs
+++ b/app/components/download-graph.hbs
@@ -1,8 +1,5 @@
 <div
-  local-class="
-    wrapper
-    {{if this.chartjs.loadTask.lastSuccessful.value "auto-height"}}
-  "
+  local-class="wrapper"
   data-test-download-graph
   ...attributes
   {{did-insert this.loadChartJs}}
