CrateRow: Add basic rendering tests

--- a/app/components/crate-row.hbs
+++ b/app/components/crate-row.hbs
@@ -11,6 +11,7 @@
         @copyText='{{@crate.name}} = "{{@crate.max_version}}"'
         title="Copy Cargo.toml snippet to clipboard"
         local-class="copy-button"
+        data-test-copy-toml-button
       >
         {{svg-jar "copy" alt="Copy Cargo.toml snippet to clipboard"}}
       </CopyButton>
